--- a/templates/result.html
+++ b/templates/result.html
@@ -10,11 +10,31 @@
 
 
 <body>
-    <a href="/"><img id="logo" src="https://aux.iconspalace.com/uploads/13347011211966979550.png"></a>
+    <nav role="navigation">
+        <div id="menu_toggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+                <a href="/">
+                    <li>Home</li>
+                </a>
+                <a href="/how_to">
+                    <li>How to...</li>
+                </a>
+                <a href="https://github.com/p-jonczyk/email_sender">
+                    <li>GIT</li>
+                </a>
+            </ul>
+        </div>
+    </nav>
+    <a id="home-logo" href="/"><img id="logo" src="https://aux.iconspalace.com/uploads/13347011211966979550.png"></a>
     <p class="page-title" name="result-title" id="result-title">SUCCESS !</p>
     <p class="page-title" name="result-info" id="result-info">Remember that only messages with valid email addresses
         were delivered.</p>
     <p class="page-title" name="result-info" id="result-info">Author of website do not take responsibility for any data
         uploaded or sent via following website.</p>
+    <p id="responsibility_msg">YOU USE THIS SITE ON YOUR OWN RESPONSIBILITY</p>
     <p id="made_by">Made by Paweł Jonczyk</p>
 </body>
