--- a/templates/fail_result.html
+++ b/templates/fail_result.html
@@ -30,7 +30,7 @@
         </div>
     </nav>
     <a id="home-logo" href="/"><img id="logo" src="https://aux.iconspalace.com/uploads/13347011211966979550.png"></a>
-    <p class="page-title" name="result-title" id="result-title">FAIL !</p>
+    <p class="page-title" name="fail-title" id="fail-title">FAIL !</p>
     <p class="page-title" name="result-info" id="result-info">Something went wrong...
         Please check your emails list. Everything above error should be sent.</p>
     <p class="page-title" name="result-info" id="result-info">Address which caused error: {{ error_msg }}</p>
