--- a/templates/result.html
+++ b/templates/result.html
@@ -30,7 +30,7 @@
         </div>
     </nav>
     <a id="home-logo" href="/"><img id="logo" src="https://aux.iconspalace.com/uploads/13347011211966979550.png"></a>
-    <p class="page-title" name="result-title" id="result-title">SUCCESS !</p>
+    <p class="page-title" name="success-title" id="success-title">SUCCESS !</p>
     <p class="page-title" name="result-info" id="result-info">Remember that only messages with valid email addresses
         were delivered.</p>
     <p class="page-title" name="result-info" id="result-info">Author of website do not take responsibility for any data
